<resources>
    <string name="app_name">Cine Connect</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="email_hint">E-mail</string>
    <string name="password_hint">Senha</string>
    <string name="email">Email</string>
    <string name="logue_se_agora_para_ter_acesso_a_toda_nossa_plataforma">Conecte-se com quem ama cinema e viva novas histórias</string>
    <string name="login">Login</string>
    <string name="register">Cadastre-se</string>
    <string name="register_description">Crie sua conta e comece a explorar filmes e conexões!</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rating_text">Avaliação: %s</string>
    <string name="delete_confirmation_title">Confirmar Exclusão</string>
    <string name="delete_confirmation_message">Você tem certeza que deseja excluir este tópico?</string>
    <string name="delete_confirmation_positive">Excluir</string>
    <string name="delete_confirmation_negative">Cancelar</string>

    <string name="large_text">
        Material is the metaphor.\n\n
        A material metaphor is the unifying theory of a rationalized space and a system of motion.
        The material is grounded in tactile reality, inspired by the study of paper and ink, yet
        technologically advanced and open to imagination and magic.\n
        Surfaces and edges of the material provide visual cues that are grounded in reality. The
        use of familiar tactile attributes helps users quickly understand affordances. Yet the
        flexibility of the material creates new affordances that supercede those in the physical
        world, without breaking the rules of physics.\n
        The fundamentals of light, surface, and movement are key to conveying how objects move,
        interact, and exist in space and in relation to each other. Realistic lighting shows
        seams, divides space, and indicates moving parts.\n\n
        …
    </string>
    <string name="search">Pesquisar</string>
    <string name="mensagens">Mensagens</string>

    <string name="movie_image">Descrição da imagem do filme</string>
    <string name="title_ia">IA</string>
</resources>
